tests/baselines/reference/errorTypesAsTypeArguments.errors.txt
==== tests/cases/compiler/errorTypesAsTypeArguments.ts (2 errors) ====
    interface Foo<A> {
      bar(baz: Foo<B>): Foo<C>;
                   ~
!!! errorTypesAsTypeArguments.ts(2,16): error TS2095: Cannot find name 'B'.
                            ~
!!! errorTypesAsTypeArguments.ts(2,25): error TS2095: Cannot find name 'C'.
    }